55. If a command fails to be sent to MPD, and the socket is in an error state,
    then completely disconnect and reconnect.
56. For windows builds, when window is not focused, draw sidebar selection as
    a darkened background.
57. If MPD supports https, then there is no need to convert SoundCould URLs.
58. If playlist is loaded and replaces playqueue, then start playback of first
    track.

1.4.2
-----
 1. When guessing song details from filename (due to missing tags), remove any
    extension - not just three letter extensions!
 2. In tag editor, only show '(Various)' hint for the 'All tracks' entry.
 3. Also capitalise composer in tag editor.
 4. Resize device properties dialog when changing transcoder.
 5. Initialise sidebar icon sizes before constructing.
 6. Display multiple genres as separate entries in playlists page genre combo.
 7. Resize cover in grouped view if it is too wide.
 8. In context view, when creating links to similar artists compare artists
    names case-insensitively.
 9. Fix downloading of podcasts when url is redirected.
10. If 'force single click' is disabled, then double-click on icon view will
    not add artist/album to playqueue but navigate into.
11. When using Cache config page to clear disk cover/scaled-cover cache, also
    clear memory cache.
12. Allow to change stream, and online-service, filter search category without
    closing current search field.
13. Fix combo-box text changed signal for Qt5 builds.
14. Don't have double spacer when cover-widget is hidden.
15. Fix crash in context view if song tracks changed quickly.
16. Better method of setting disabled opacity for monochrome icons.
17. Fix parsing of podcast RSS files containing "content" tag.
18. Set user-agent for podcast URL queries, otherwise requests can fail.
19. Use https://googledrive.com/host/XXX and not
    https://drive.google.com/uc?export=download&id=XXX for stream provider URLs,
    etc. Seems like the drive.google.com URLs have download limits.